--- a/app/views/resumesections/list.html.erb
+++ b/app/views/resumesections/list.html.erb
@@ -1,7 +1,7 @@
-
+<%= javascript_include_tag :defaults %>
 <h1><%= @title %></h1>
 <br />
-<!--
+
 <b><%= link_to "Add Another Section", "/newresume/#{params[:id]}" %></b><br /><br />
 
 <table>
@@ -27,4 +27,3 @@
 </table>
 <br />
 <%= button_to "Finish Creating Resume", "/viewresume/#{params[:id]}" %>
--->
