--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -71,7 +71,7 @@ img.aligncenter {
 
 #header-wrapper {
 	height: 240px;
-	background: url(images/img01.jpg) no-repeat center top;
+	/*background: url(images/img01.jpg) no-repeat center top;*/
 }
 
 #header {
