Fix orderNum DB issue on Heroku

--- a/app/views/resumesections/list.html.erb
+++ b/app/views/resumesections/list.html.erb
@@ -18,7 +18,7 @@
     <td><%= resumesection.id %></td>
 	<td><%= resumesection.section.typesection %></td>
 	<td><%= resumesection.section.title %></td>
-	<td><%= resumesection.orderNum %></td>
+	<td><%= resumesection.ordernum %></td>
 	<td><%= link_to 'Edit Order', "resumesections/#{resumesection}/edit" %> | 
 	<%= link_to 'Delete', resumesection, :confirm => 'Are you sure?', :method => :delete %></td>
  
