--- a/app/views/resumesections/list.html.erb
+++ b/app/views/resumesections/list.html.erb
@@ -19,7 +19,7 @@
 	<td><%= resumesection.section.typesection %></td>
 	<td><%= resumesection.section.title %></td>
 	<td><%= resumesection.ordernum %></td>
-	<td><%= link_to 'Edit Order', "resumesections/#{resumesection}/edit" %> | 
+	<td><%= link_to 'Edit Order', "/resumesections/#{resumesection.id}/edit" %> | 
 	<%= link_to 'Delete', resumesection, :confirm => 'Are you sure?', :method => :delete %></td>
  
   </tr>
