--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -15,7 +15,7 @@
 		<li><%= link_to "Home", root_path %></li>
 		
 		<% if signed_in? %>
-		<li><%= link_to "Settings", "/users/#{current_user}/edit" %></li>
+		<li><%= link_to "Settings", "/users/#{current_user.id}/edit" %></li>
 		<li><%= link_to "Sign out", signout_path, :method => :delete %></li>
 		<% else %>
 		<li><%= link_to "Sign in", signin_path %></li>
