Fix CSS and check changes.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,8 +3,8 @@
 <h2 class="title">Roundfile: A Resume Tool</h2>
   <p class ="meta">
   Welcome to Roundfile!
-  Create sections to mix and match to create your perfect resume!
-  Choose from the links on the left to start creating your resume.
+  Create sections to mix and match to create your perfect resume!<br /><br />
+  <b>Choose from the links on the left to start creating your resume.</b>
 </p>
 <br />
   
