--- a/app/views/resumesections/new.html.erb
+++ b/app/views/resumesections/new.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @title %></h1>
 
+<%= flash[:error] %>
+
 <% if !@myContact.blank? || !@myObjective.blank? || !@myQualifications.blank? || !@myEducation.blank? || !@mySkills.blank? || !@myEmplHistory.blank? || !@myListRef.blank? || !@myOther.blank? %>
 
 	<table>
