--- a/app/views/resumesections/new.html.erb
+++ b/app/views/resumesections/new.html.erb
@@ -4,7 +4,7 @@
 
 <% if !@myContact.blank? || !@myObjective.blank? || !@myQualifications.blank? || !@myEducation.blank? || !@mySkills.blank? || !@myEmplHistory.blank? || !@myListRef.blank? || !@myOther.blank? %>
 
-	<table>
+	<table class="profile">
 	<tr>
 		<th></th><th>Choose Section</th><th>Order #</th><th></th>
 	</tr>
