--- a/app/views/sections/mysections.html.erb
+++ b/app/views/sections/mysections.html.erb
@@ -3,7 +3,7 @@
 <h1><%= @title %></h1>
 <br />
 <% if !@section.blank? %>
-<table>
+<table class="profile">
   <tr>
     <th>Type</th>
     <th>Title</th>
