--- a/app/views/sections/show.html.erb
+++ b/app/views/sections/show.html.erb
@@ -1,7 +1,7 @@
 
 <h1><%= @title %></h1>
 <br />
-<table>
+<table class="profile">
 <tr><th>Type</th><th>Creator</th><th>Title</th></tr>
 <tr>
 <td><%= @section.typesection %></td>
