Adding Search function to site.

--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -9,7 +9,8 @@
 		
 		<li><%= link_to "New Section", "/newsection" %></li>
 		<li><%= link_to "My Sections", "/mysections" %></li>
-		<li><%= link_to "User Resumes", "/userresumes"%></li>
+		<li><%= link_to "User Resumes", "/userresumes" %></li>
+		<li><%= link_to "Search", "/search" %></li>
 		
 		<% end %>
 		</ul>
