--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,5 +1,6 @@
 <h1>Editing Comment</h1>
-
+<div id="panel-section" class="round">
 <%= render 'form' %>
+</div><br>
 
 <%= link_to 'Back to View Resume', "/viewresume/#{@comment.resumeid}" %>
