--- a/app/views/resumes/new.html.erb
+++ b/app/views/resumes/new.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @title %></h1>
 <br />
-
+<div id = "panel-signin" class = "round">
 <%= form_for(@resume) do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
     <div class="field">
@@ -16,4 +16,4 @@
 		<% end %>
 	
 	
-
+</div>
