--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -1,5 +1,7 @@
 <h1>Editing Section</h1>
 <br />
+<div id = "panel" class = "round">
 <%= render 'form' %>
-
+</div>
+<br />
 <%= link_to 'Back to View Section', @section %>
