--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,6 @@
 <h1><%= @title %></h1>
 <br />
+<div id="panel-section" class="round">
 <%= form_for(@comment) do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
   <div class="field">
@@ -19,5 +20,5 @@
     <%= f.submit "Submit Comment", :disable_with => "Submitting..." %>
   </div>
 <% end %>
-
+</div><br>
 <%= link_to 'Back to View Resume', "/viewresume/#{params[:id]}" %>
