--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,5 +1,7 @@
 <h1><%= @title %></h1>
 <br />
+
+<div id = "panel-section" class = "round">
 <%= form_for(@section) do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
   <div class="field">
@@ -8,11 +10,11 @@
   </div>
   <div class="field">
     <%= f.label :title %><br />
-    <%= f.text_field :title %>
+    <%= f.text_field :title , :size => 30 %>
   </div>
   <div class="field">
     <%= f.label :content %><br />
-    <%= f.text_area :content %>
+    <%= f.text_area :content , :width => 60 %>
   </div>
   
   <div class="field">
@@ -23,3 +25,4 @@
     <%= f.submit "Create Section", :disable_with => "Submitting..." %>
   </div>
 <% end %>
+</div>
