--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -684,7 +684,7 @@ border-style: solid;
 }
 
 #panel-signin{
-	background:  #f8f8f8;
+	background:  #dddddd;
 	padding: 20px 20px 20px 20px;
 	width: 20em;
 }
@@ -696,7 +696,7 @@ border-style: solid;
 #panel-section{
 	background:  #f8f8f8;
 	padding: 20px 20px 20px 20px;
-	width: 400px;
+	width: 40em;
 }
 .round {
   -moz-border-radius:    10px;
