--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -561,9 +561,9 @@ td.sidebar {
 }
 
 #resume{
-background:  #f8f8f8;
-padding: 20px 20px 20px 20px;
-border-style: solid;
+	background:  #f8f8f8;
+	padding: 20px 20px 20px 20px;
+	border-style: solid;
 	border-width: 1px;
 	border-color: black;
 }
@@ -613,7 +613,7 @@ border-style: solid;
 
 }
 #search-a{
-	width: 400px;
+	width: 40em;
 	float: left;
 	padding: 20px 20px 20px 20px;
 	background:  #f8f8f8;
@@ -684,7 +684,7 @@ border-style: solid;
 }
 
 #panel-signin{
-	background:  #dddddd;
+	background:  #eeeeee;
 	padding: 20px 20px 20px 20px;
 	width: 20em;
 }
