--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Editing Comment</h1>
-<div id="panel-section" class="round">
+<div id="panel-newcomment" class="round">
 <%= render 'form' %>
 </div><br>
 
