--- a/app/views/resumes/edit.html.erb
+++ b/app/views/resumes/edit.html.erb
@@ -1,8 +1,9 @@
 <h1>Editing Resume Title</h1>
 <br />
 
-
+<div id = "panel-signin" class = "round">
 <%= render 'form' %>
+</div>
 <br />
 OR
 <%= link_to 'Edit Resume Sections List', "/newresumelist/#{@resume.id}" %><br /><br />
