--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @title %></h1>
 <br />
-<div id="panel-section" class="round">
+<div id="panel-newcomment" class="round">
 <%= form_for(@comment) do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
   <div class="field">
