--- a/app/views/sections/edit.html.erb
+++ b/app/views/sections/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Section</h1>
 <br />
-<div id = "panel" class = "round">
+<div id = "panel-section" class = "round">
 <%= render 'form' %>
 </div>
 <br />
