--- a/app/views/sections/new.html.erb
+++ b/app/views/sections/new.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @title %></h1>
 <br />
 
-<div id = "panel-section" class = "round">
+<div id = "panel-newcomment" class = "round">
 <%= form_for(@section) do |f| %>
   <%= render 'shared/error_messages', :object => f.object %>
   <div class="field">
